# QuoteFinder

./: .gitignore  pyproject.toml
app/: config.py  main.py
app/api/: api_rag.py  api_retrieval.py  api_vector_db.py
app/rag/: chunking_service.py  converter.py  graph.py  normalization_service.py  rerank.py  retrieval.py  vector_db.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/: index.html
bruno-QF/: workspace.yml
bruno-QF/collections/pages/: homepage.yml  opencollection.yml
bruno-QF/collections/rag/: ask-rag.yml  opencollection.yml
bruno-QF/collections/retrieval/: opencollection.yml  retrieval.yml
bruno-QF/collections/vector-db/: clean-data.yml  convert-md.yml  create-db.yml  embedding-models.yml  opencollection.yml  upload-files.yml
test-files/md/: P05.md  P06.md
test-files/word/: P07.docx  P08.docx
