[project]
name = "quotefinder"
version = "0.1.0"
description = "Esta es una app web que monta un RAG optimizado para modelos locales pequeños"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix-otel>=0.16.1",
    "docling>=2.93.0",
    "fastapi>=0.136.1",
    "flashrank>=0.2.10",
    "lancedb>=0.30.2",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.0",
    "openinference-instrumentation-langchain>=0.1.66",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.46.0",
]
